style start, no images

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
                   <div class="input-group-prepend">
                     <button class="btn btn-outline-secondary" type="button" id="scrapeButton">Scrape</button>
                   </div>
-                  <input type="text" id = "subreddit" class="form-control" placeholder="enter subreddit name" aria-label="Example text with button addon" aria-describedby="button-addon1">
+                  <input type="text" id = "subreddit" class="form-control" placeholder="enter subreddit name (no spaces)" aria-label="Example text with button addon" aria-describedby="button-addon1">
                 </div>
             </div>
         </div>
