final button-up

--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,17 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>News Scraper</title>
+    <title>Reddit Jr.</title>
     <link rel="stylesheet" type="text/css" href="./style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   </head>
   <body>
     <div id="wrapper">
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
-              <h1 class="display-4">Reddit Scraper</h1>
-              <p class="lead">Enter a Subreddit to get Started</p>
+              <h1 class="display-4 text-center"><i class="fab fa-reddit-alien"></i>Reddit Scraper<i class="fab fa-reddit-alien"></i></h1>
+              <p class="lead text-center">Enter a Subreddit to get Started</p>
               <div class="input-group mb-3">
                   <div class="input-group-prepend">
                     <button class="btn btn-outline-secondary" type="button" id="scrapeButton">Scrape</button>
